--- a/frontend/src/pages/Profile/style.css
+++ b/frontend/src/pages/Profile/style.css
@@ -63,6 +63,7 @@
 
 .profile-container ul li button {
     position: absolute;
+    background: transparent;
     right: 24px;
     top: 24px;
     border: 0;
